--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "typescript",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/sakurai2020/typescript/issues"
   },
-  "homepage": "https://github.com/sakurai2020/typescript#readme"
+  "homepage": "https://github.com/sakurai2020/typescript#readme",
+  "devDependencies": {
+    "typescript": "^3.7.5"
+  },
+  "description": ""
 }
